[package]
name = "keybearer"
version = "0.1.0"
edition = "2024"


[dependencies]
libc = "0.2"
nix = { version = "0.28", features = ["fs", "process", "socket", "uio", "ioctl"] }
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml_edit = "0.22"
json5 = "0.4"
serde_yaml = "0.9"

[dev-dependencies]
dirs = "6"
